# Rich-Agents

./: .gitignore  CHANGELOG.md  PACKAGE_RELEASE_GUIDE.md  README.md  RELEASE_SUMMARY.md  RICH_AGENTS_CLI_UPDATE.md  RICH_AGENTS_CONFIG_ENHANCEMENT.md  RICH_AGENTS_GUIDE.md  RICH_AGENTS_LLM_PROVIDERS_EXPANSION.md  main.py  pyproject.toml  requirements.txt  target.md  test_package_installation.py
cli/: main.py  patent_cli.py  rich_agents_main.py  rich_agents_simple.py  trading_cli.py
cli/static/: patent_welcome.txt
config/: patent_config.json  rich_agents_config.json  trading_config.json
docs/: README.md
docs/en-US/: architecture_guide.md  configuration_guide.md  prompt_templates.md  quick_reference.md  quick_start_guide.md
patentagents/agents/: __init__.py
patentagents/agents/analysts/: __init__.py  innovation_discovery.py  prior_art_researcher.py  technology_analyst.py
patentagents/agents/utils/: __init__.py  patent_states.py  patent_utils.py
patentagents/agents/writers/: __init__.py  patent_writer.py
patentagents/cli/: __init__.py  main.py
patentagents/dataflows/: google_patents_utils.py  zhihuiya_utils.py
patentagents/graph/: patent_graph.py
shared/config/: rich_agents_config_manager.py
shared/llm_adapters/: unified_llm_adapter.py
