[project]
name = "rich-agents"
version = "0.1.0"
description = "Rich-Agents: 多智能体AI工具集 - 支持金融交易分析和专利智能体"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "eodhd>=1.0.32",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.optional-dependencies]
trading = [
    "yfinance>=0.2.63",
    "finnhub-python>=2.4.23",
    "akshare>=1.16.98",
    "stockstats>=0.6.5",
    "pytdx>=1.72",
]
patent = [
    "google-search-results>=2.4.2",
    "beautifulsoup4>=4.9.0",
]
chinese = [
    "pytdx>=1.72",
    "dashscope>=1.0.0",
]
database = [
    "pymongo>=4.0.0",
    "redis>=6.2.0",
]
visualization = [
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
]
development = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
all = [
    "yfinance>=0.2.63",
    "finnhub-python>=2.4.23",
    "akshare>=1.16.98",
    "stockstats>=0.6.5",
    "pytdx>=1.72",
    "google-search-results>=2.4.2",
    "beautifulsoup4>=4.9.0",
    "dashscope>=1.0.0",
    "pymongo>=4.0.0",
    "redis>=6.2.0",
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
]

[project.scripts]
rich-agents = "cli.rich_agents_main:app"

