[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rich-agents"
version = "0.2.4"
description = "Rich-Agents: Unified Multi-Agent AI Toolkit - Supporting Financial Trading Analysis and Patent Intelligence Systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TradingAgents Team", email = "chenxingqiang@turingai.cc"}
]
maintainers = [
    {name = "Turingai Team", email = "chenxingqiang@turingai.cc"}
]
keywords = [
    "artificial-intelligence",
    "multi-agent",
    "trading",
    "patent",
    "llm",
    "financial-analysis",
    "patent-analysis",
    "ai-toolkit"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.8"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-experimental>=0.0.50",
    "redis>=5.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "setuptools>=61.0",
    "typing-extensions>=4.0.0",
    "tqdm>=4.65.0",
    "pytz>=2023.3"
]

[project.urls]
Homepage = "https://github.com/chenxingqiang"
Documentation = "https://github.com/chenxingqiang/Rich-Agents"
Repository = "https://github.com/chenxingqiang/Rich-Agents"
Issues = "https://github.com/chenxingqiang/Rich-Agents/issues"
Changelog = "https://github.com/chenxingqiang/TradingAgents/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# TradingAgent dependencies
trading = [
    "yfinance>=0.2.0",
    "finnhub-python>=2.4.0",
    "eodhd>=1.0.0",
    "stockstats>=0.6.0",
    "backtrader>=1.9.0",
    "feedparser>=6.0.0",
    "praw>=7.7.0",
    "parsel>=1.8.0"
]

# PatentAgent dependencies
patent = [
    "chromadb>=0.4.0",
    "chainlit>=1.0.0"
]

# Chinese market support
chinese = [
    "akshare>=1.12.0",
    "tushare>=1.2.0"
]

# Database support
database = [
    "pymongo>=4.0.0",
    "redis>=5.0.0"
]

# Visualization support
visualization = [
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0"
]

# CLI enhancements
cli = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "typer>=0.9.0"
]

# Development dependencies
development = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "twine>=4.0.0",
    "build>=0.10.0"
]

# All dependencies
all = [
    "rich-agents[trading,patent,chinese,database,visualization,cli,development]"
]

[project.scripts]
rich-agents = "cli.main:main"
trading-agents = "cli.trading_cli:main"
patent-agents = "cli.patent_cli:main"

[tool.setuptools]
packages = [
    "shared", 
    "shared.config", 
    "shared.llm_adapters", 
    "shared.cache", 
    "shared.utils", 
    "cli", 
    "tradingagents", 
    "tradingagents.graph", 
    "tradingagents.agents",
    "tradingagents.agents.analysts",
    "tradingagents.agents.managers", 
    "tradingagents.agents.researchers",
    "tradingagents.agents.risk_mgmt",
    "tradingagents.agents.trader",
    "tradingagents.agents.utils",
    "tradingagents.config", 
    "tradingagents.dataflows",
    "tradingagents.api", 
    "tradingagents.llm_adapters", 
    "patentagents", 
    "tests"
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

